api/tests/snapshots/data_routes__export_data_get_200_empty.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "app_version": "<VERSION>",
    "data": {
      "entries": [],
      "goals": []
    },
    "exported_at": "<TS>",
    "schema_version": 1
  },
  "status": 200
}
