api/tests/snapshots/data_routes__export_data_get_401.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
