api/tests/snapshots/data_routes__export_data_get_trailing_slash_404.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Resource not found"
  },
  "status": 404
}
