api/tests/snapshots/data_routes__import_data_get_405.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": 405, \"body\": body })"
---
{
  "body": {
    "error": "Method not allowed"
  },
  "status": 405
}
