api/tests/snapshots/data_routes__import_data_post_200.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "entries": {
      "imported": 1,
      "skipped": 1
    },
    "goals": {
      "imported": 1,
      "skipped": 1
    },
    "status": "success"
  },
  "status": 200
}
