api/tests/snapshots/data_routes__import_data_post_200_all_new_empty_db.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "entries": {
      "imported": 1,
      "skipped": 0
    },
    "goals": {
      "imported": 1,
      "skipped": 0
    },
    "status": "success"
  },
  "status": 200
}
