api/tests/snapshots/data_routes__import_data_post_400_missing_schema_version.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "schema_version is required"
  },
  "status": 400
}
