api/tests/snapshots/data_routes__import_data_post_400_not_json.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Bad request"
  },
  "status": 400
}
