api/tests/snapshots/data_routes__import_data_post_400_unsupported_schema_version.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Unsupported schema_version: 2 (supported: 1)"
  },
  "status": 400
}
