api/tests/snapshots/data_routes__import_data_post_403_cookie_missing_csrf.snap
---
source: tests/data_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Missing required request header"
  },
  "status": 403
}
